--- a/src/components/DisplayTable.astro
+++ b/src/components/DisplayTable.astro
@@ -2,10 +2,10 @@
 const { id, class_="" } = Astro.props;
 ---
 
-<div id={id + '_container'} class="overflow-auto">
-    <table id={id} class={class_ + ' table table-responsive w-100'} >
-        <slot/>
-    </table>
+<div id={id + '_container'} class="overflow-auto" >
+        <table id={id} class={class_ + ' table table-responsive w-100 overflow-auto'} style="table-layout: fixed;" >
+            <slot/>
+        </table>
 </div>
 
 <script is:inline define:vars={{id}}>
