added animations, made image into table

--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -36,7 +36,7 @@ Friction is a force that resists the movement of two contacting surfaces sliding
 Examples of coefficients of static friction: 
 
 
-<DisplayTable id="friction_table" class_="table-bordered">
+<DisplayTable id="friction_table" class_="table-bordered table-striped">
     <thead>
         <tr>
             <th class="text-center">System</th>
