--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -999,12 +999,11 @@ import DisplayTable from "../../components/DisplayTable.astro"
       coordinate line in the direction <InlineEquation equation="\\hat{e}_\\theta" />, and
       similarly for the other coordinates.
     </p>
-    <Center>
     <Row>
       <Col values="12 md-6" class:list={['overflow-hidden']}>
-        <div class="d-flex justify-content-center justify-content-md-start">
+        <!-- <div class="d-flex justify-content-center justify-content-md-start"> -->
           <PrairieDrawCanvas id="rvs-fd-c" width="400" height="400" />
-        </div>
+        <!-- </div> -->
         
       </Col>
       <Col values="12 md-6">
@@ -1059,7 +1058,6 @@ import DisplayTable from "../../components/DisplayTable.astro"
       </div>
       </Col>  
     </Row>
-  </Center>
 
   <p>
     Spherical coordinates are defined with respect to a set of
@@ -1218,32 +1216,32 @@ import DisplayTable from "../../components/DisplayTable.astro"
 	  This gives coordinates \((r, \theta, z)\)
       consisting of:
     </p>
-      <DisplayTable id="rvs-tc" class_="mb-3">
-        <tr class="border-below">
-          <th>coordinate</th>
-          <th>name</th>
-          <th>range</th>
-          <th>definition</th>
-        </tr>
-        <tr>
-          <td>\(r\)</td>
-          <td>radius</td>
-          <td>\(0 \le r \lt \infty\)</td>
-          <td>distance from the origin</td>
-        </tr>
-        <tr>
-          <td>\(\theta\)</td>
-          <td>azimuth</td>
-          <td>\(-\pi \lt \theta \le \pi\)</td>
-          <td>angle from the \(x\)-axis in the \(x\)–\(y\) plane</td>
-        </tr>
-        <tr>
-          <td>\(z\)</td>
-          <td>height</td>
-          <td>\(-\infty \le z \le \infty\)</td>
-          <td>vertical height</td>
-        </tr>
-      </DisplayTable>
+  <DisplayTable id="cylcoords_table" class_="mb-3">
+    <tr class="border-below">
+      <th>coordinate</th>
+      <th>name</th>
+      <th>range</th>
+      <th>definition</th>
+    </tr>
+    <tr>
+      <td>\(r\)</td>
+      <td>radius</td>
+      <td>\(0 \le r \lt \infty\)</td>
+      <td>distance from the origin</td>
+    </tr>
+    <tr>
+      <td>\(\theta\)</td>
+      <td>azimuth</td>
+      <td>\(-\pi \lt \theta \le \pi\)</td>
+      <td>angle from the \(x\)-axis in the \(x\)–\(y\) plane</td>
+    </tr>
+    <tr>
+      <td>\(z\)</td>
+      <td>height</td>
+      <td>\(-\infty \le z \le \infty\)</td>
+      <td>vertical height</td>
+    </tr>
+  </DisplayTable>
 
 <CalloutContainer slot="cards">
         <CalloutCard title="Warning!">
@@ -1267,9 +1265,70 @@ import DisplayTable from "../../components/DisplayTable.astro"
       coordinate line in the direction <InlineEquation equation="\\hat{e}_\\theta" />, and
       similarly for the other coordinates.
     </p>
-    
-	<BlueText> Insert animation from <a href="https://mechref.engr.illinois.edu/dyn/rvy.html"> here </a>. </BlueText>
 
+  <Row>
+    <Col values="12 md-6">
+      <PrairieDrawCanvas id="rvy-fd-c" width="400" height="400" />
+    </Col>
+    <Col values="12 md-6">
+      <button class="reset:rvy-fd-c" onclick="rvy_fd_c.reset()">reset</button>
+      <table class="alignTop">
+        <tr>
+          <td>Show:</td>
+          <td>
+            <button class="option-toggle:rvy-fd-c:showLabels" onclick="rvy_fd_c.toggleOption('showLabels')">labels</button>
+            <button class="option-toggle:rvy-fd-c:showCoords" onclick="rvy_fd_c.toggleOption('showCoords')">coordinates</button>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <button class="option-toggle:rvy-fd-c:showBasis" onclick="rvy_fd_c.toggleOption('showBasis')">basis vectors</button>
+          </td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Coordinate lines:</td>
+          <td>
+            <button class="option-toggle:rvy-fd-c:showCoordLineR" onclick="rvy_fd_c.toggleOption('showCoordLineR')">\(r\)</button>
+            <button class="option-toggle:rvy-fd-c:showCoordLineTheta" onclick="rvy_fd_c.toggleOption('showCoordLineTheta')">\(\theta\)</button>
+            <button class="option-toggle:rvy-fd-c:showCoordLineZ" onclick="rvy_fd_c.toggleOption('showCoordLineZ')">\(z\)</button>
+          </td>
+        </tr>
+      </table>
+
+        <Row> 
+          <Col values="12">
+            <div class="d-flex  align-items-baseline">
+                <p class="m-0 flex-shrink-1">Radius:</p>
+                <div class="flex-grow-1 d-flex align-items-baseline">
+                    <input min="1" max="6" value="4" step="0.1" type="range" class="data-input:rvy-fd-c:r flex-grow-1 mx-2" onchange="rvy_fd_c.setOption('r', this.value); document.querySelector('span[class*=rCyl1]').innerText = this.value; console.log(this.value);" oninput="rvy_fd_c.setOption('r', this.value); document.querySelector('span[class*=rCyl1]').innerText = this.value;"/>
+                        \(r = \; \) <span class="data-option:avb-fp-c:rCyl1">4</span>
+                </div>
+            </div>
+        </Col>
+          <Col values="12">
+              <div class="d-flex  align-items-baseline">
+                  <p class="m-0 flex-shrink-1">Azimuth:</p>
+                  <div class="flex-grow-1 d-flex align-items-baseline">
+                      <input type="range" min="-180" max="180" value="45" step="5" class="data-input:rvy-fd-c:thetaDeg flex-grow-1 mx-2" onchange="rvy_fd_c.setOption('thetaDeg', this.value); document.querySelector('span[class*=thetaDegCyl1]').innerText = this.value; console.log(this.value);" oninput="rvy_fd_c.setOption('thetaDeg', this.value); document.querySelector('span[class*=thetaDegCyl1]').innerText = this.value;"/>
+                          \(\theta = \; \) <span class="data-option:avb-fp-c:thetaDegCyl1">45</span>\(^\circ\)
+                  </div>
+              </div>
+          </Col>
+          <Col values="12">
+            <div class="d-flex  align-items-baseline">
+                <p class="m-0 flex-shrink-1">Elevation:</p>
+                <div class="flex-grow-1 d-flex align-items-baseline">
+                    <input type="range" min="-180" max="180" value="45" step="5" class="data-input:rvy-fd-c:z flex-grow-1 mx-2" onchange="rvy_fd_c.setOption('z', this.value); document.querySelector('span[class*=zCyl1]').innerText = this.value; console.log(this.value);" oninput="rvy_fd_c.setOption('z', this.value); document.querySelector('span[class*=zCyl1]').innerText = this.value;"/>
+                        \(z = \; \) <span class="data-option:avb-fp-c:zCyl1">4</span>
+                </div>
+            </div>
+        </Col>
+      </Row>
+    </Col>
+  </Row>  
   <p>
     Spherical coordinates are defined with respect to a set of
     Cartesian coordinates, and can be converted to and from
