--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -7,6 +7,7 @@ import BlueText from "../../components/BlueText.astro"
 import RedText from "../../components/RedText.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
+import InlineEquation from "../../components/InlineEquation.astro"
 ---
 
 <style>
@@ -25,9 +26,15 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <Section title="Friction" id="friction">
 
+<p>
 Friction is a force that resists the movement of two contacting surfaces sliding relative to each other. Frictional forces act tangential to the surface at the point of contact and act in opposition to the possible or existing motion between the surfaces. 
+</p>
 
-<BlueText>Insert content from the TAM 212 page Friction and Damping - Introductory equation box</BlueText>
+
+<DisplayEquation equation="F \\le  \\mu F" background="True"  title="Limit on friction force magnitude." />
+
+<p>
+	Variables <b> <InlineEquation equation=" F "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction for <b> <InlineEquation equation=" \\vec{F} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu "/> </b> is the coefficient of friction.
 
 </Section>
 
@@ -67,7 +74,7 @@ Examples of coefficients of static friction:
     </tbody>
 </DisplayTable>
 
-<Image src='/Statics/FrictionFigures/ExampleCoeff.png' width='3 '><BlueText>Taken from TAM 210 Lecture 26</BlueText></Image>
+
 
 <!--This might be a good place to add practical examples - maybe how engine brakes use friction? And another thing about how cartilage in your joints has very little friction (like ice on ice!) which allows for joint movement.-->
 
